@@ -9,3 +9,4 @@ Contributors
 Jean-Denis Vauguet <jd_@users.sourceforge.net>
 Dave Holland <dave@biff.org.uk>
 Neil Harris <neil@tonal.clara.co.uk>
+Johannes Wolter <j@inutil.org>
